# zmqpoc

./: README.md  client.py  pyproject.toml  scripts  socket_forwarder.py  zmqpoc.Dockerfile
tests/: test_proxy_chunks.py
zmq_requestor/: __main__.py  proxy.py  service.py  util.py
zmqpoc/: client.py  plain_client.py  plain_server.py  server.py  socket_forwarder.py
